<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GitHub User App</string>
    <string name="search_hint">Search</string>
    <string name="count">count</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="nama_lengkap">Full Name</string>
    <string name="username">username</string>
    <string name="repository">Repositories</string>
    <string name="location">Location</string>
    <string name="subtitle">Hello Developers!</string>
    <string name="title">GitHub Users</string>
    <string name="github_logo">Github Logo</string>
    <string name="company_icon">Company Icon</string>
    <string name="location_icon">Location Icon</string>
    <string name="fav_list">Favorite List</string>
    <string name="share_title">Share %1$s\'s Github Account</string>
    <string name="share_sub">Hi, make %1$s to favorite on Github User App. Check out his/her GitHub Profile : https://github.com/%2$s</string>
    <string name="settings">Settings</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="key_switch">alarm</string>
    <string name="key_pref">lang</string>
    <string name="reminder_at">Reminder at 9:00 AM</string>
    <string name="select_language">Select Language</string>
    <string name="reminder_summary">Set repeating reminder</string>
    <string name="general">General</string>
    <string name="sum_lang">English</string>
    <string name="no_data_available">No Data Available</string>
    <string name="daily_reminder_enabled">Daily Reminder Enabled</string>
    <string name="daily_reminder_disabled">Daily Reminder Disabled</string>
    <string name="add_fav">Added to Favorite</string>
    <string name="remove_fav">Removed from Favorite</string>
    <string name="appwidget_text">FAVORITE USER</string>
    <string name="empty_text">NO DATA</string>
    <string name="share_button">Share Button</string>
</resources>