<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:elevation="4dp"
    card_view:cardBackgroundColor="@color/lightblue"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_avatar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="12dp"
            app:civ_border_color="@color/navyblue_700"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TitleFavList"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toEndOf="@+id/img_item_avatar"
            app:layout_constraintTop_toTopOf="@+id/img_item_avatar"
            app:layout_constraintVertical_bias="0.105"
            tools:text="Username" />

        <ImageView
            android:id="@+id/iv_comp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/company_icon"
            android:src="@drawable/ic_baseline_apartment_24"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/img_item_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            app:layout_constraintVertical_bias="1.0"
            app:tint="@color/navyblue_500" />

        <TextView
            android:id="@+id/tv_comp"
            style="@style/TextFavList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxWidth="90dp"
            android:maxLines="1"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@+id/iv_comp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintStart_toEndOf="@+id/iv_comp"
            app:layout_constraintTop_toTopOf="@+id/iv_comp"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iv_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/location_icon"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_comp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toEndOf="@+id/img_item_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            app:layout_constraintVertical_bias="0.0"
            app:tint="@color/navyblue_500" />

        <TextView
            android:id="@+id/tv_loc"
            style="@style/TextFavList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxWidth="90dp"
            android:maxLines="1"
            android:text="@string/location"
            app:layout_constraintBottom_toBottomOf="@+id/iv_loc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_loc"
            app:layout_constraintTop_toTopOf="@+id/iv_loc"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.941"
            app:layout_constraintStart_toEndOf="@+id/img_item_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.102"
            app:tint="@color/navyblue_700"
            android:contentDescription="@string/share_button" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_avatar"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_count_followers"
            style="@style/TextCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="48dp"
            android:text="@string/count"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.515" />

        <TextView
            android:id="@+id/tv_followers"
            style="@style/TextCountList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/followers"
            app:layout_constraintBottom_toBottomOf="@+id/tv_count_followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_count_followers"
            app:layout_constraintTop_toTopOf="@+id/tv_count_followers"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_count_following"
            style="@style/TextCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/count"
            app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_followers"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextCountList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:text="@string/following"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>